--- a/ingest/deploy.ingest.yml
+++ b/ingest/deploy.ingest.yml
@@ -19,7 +19,7 @@ spec:
       containers:
       - name: ingest
         image: nbisweden/ega-base:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         command: ["gosu", "lega", "ega-ingest"]
         env:
         - name: LEGA_PASSWORD
