--- a/s3/sts.minio.yml
+++ b/s3/sts.minio.yml
@@ -8,8 +8,6 @@ spec:
   replicas: 1
   template:
     metadata:
-      annotations:
-        pod.alpha.Kubernetes.io/initialized: "true"
       labels:
         app: minio
     spec:
@@ -48,7 +46,7 @@ spec:
         volume.beta.Kubernetes.io/storage-class: miniosc
     spec:
       accessModes:
-        - ReadWriteOnce
+        - ReadWriteMany
       resources:
         requests:
           storage: 0.5Gi
