--- a/yml/cega-mq/sts.cega-mq.yml
+++ b/yml/cega-mq/sts.cega-mq.yml
@@ -34,6 +34,9 @@ spec:
         - name: rabbitmq
           mountPath: /etc/rabbitmq
       volumes:
+      - name: rabbitmq
+        persistentVolumeClaim:
+          claimName: rabbitmq
       - name: cega-script
         configMap:
           name: cega-script
