--- a/yml/mq/cm.lega-mq.yml
+++ b/yml/mq/cm.lega-mq.yml
@@ -35,10 +35,6 @@ data:
 
     [[ -z "${CEGA_CONNECTION}" ]] && echo 'Environment CEGA_CONNECTION is empty' 1>&2 && exit 1
 
-    apt-get update
-    apt-get install -y curl netcat
-    rm -rf /var/lib/apt/lists/*
-
     # Initialization
     cp --remove-destination /temp/rabbitmq.config /etc/rabbitmq/rabbitmq.config
     cp --remove-destination /temp/defs.json /etc/rabbitmq/defs.json
@@ -47,9 +43,7 @@ data:
     rabbitmq-plugins enable --offline rabbitmq_shovel
     rabbitmq-plugins enable --offline rabbitmq_shovel_management
 
-    chown rabbitmq:rabbitmq /etc/rabbitmq/rabbitmq.config
     chmod 640 /etc/rabbitmq/rabbitmq.config
-    chown rabbitmq:rabbitmq /etc/rabbitmq/defs.json
     chmod 640 /etc/rabbitmq/defs.json
 
     # Problem of loading the plugins and definitions out-of-orders.
@@ -99,23 +93,22 @@ data:
      "policies":[{"vhost":"/","name":"CEGA","pattern":"files","apply-to":"queues","definition":{"federation-upstream":"from-CEGA"},"priority":0}]
     }
     EOF
-    chown rabbitmq:rabbitmq /etc/rabbitmq/defs-cega.json
     chmod 640 /etc/rabbitmq/defs-cega.json
 
     # And...cue music
-    chown -R rabbitmq /var/lib/rabbitmq
+    # chown -R rabbitmq /var/lib/rabbitmq
 
     { # Spawn off
         sleep 5 # Small delay first
 
-        # Wait until the server is ready (on the management port)
-        until nc -z 127.0.0.1 15672; do sleep 1; done
+        # Wait until the server is ready (because we don't nave netcat we use wait on the pid)
         ROUND=30
-        until curl -X POST -u guest:guest -H "Content-Type: application/json" --data @/etc/rabbitmq/defs-cega.json http://127.0.0.1:15672/api/definitions || ((ROUND<0))
+        until rabbitmqctl wait /var/lib/rabbitmq/mnesia/rabbit@${HOSTNAME}.pid || ((ROUND<0))
         do
     	sleep 1
     	$((ROUND--))
         done
+        rabbitmqadmin import /etc/rabbitmq/defs-cega.json
         ((ROUND<0)) && echo "Central EGA connections *_not_* loaded" 2>&1 && exit 1
         echo "Central EGA connections loaded"
     } &
