--- a/yml/ingest/deploy.ingest.yml
+++ b/yml/ingest/deploy.ingest.yml
@@ -1,18 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: lega-ingest
+  name: ingest
   labels:
     role: ingest
+    app: LocalEGA
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: lega-ingest
+      app: ingest
   template:
     metadata:
       labels:
-        app: lega-ingest
+        app: ingest
         role: ingest
     spec:
       containers:
@@ -36,18 +37,8 @@ spec:
             secretKeyRef:
               name: s3-keys
               key: secret_key
-        - name: AWS_ACCESS_KEY_ID
-          valueFrom:
-            secretKeyRef:
-              name: s3-keys
-              key: access_key
-        - name: AWS_SECRET_ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              name: s3-keys
-              key: secret_key
         volumeMounts:
-        - name: lega-inbox
+        - name: inbox
           mountPath: /ega/inbox
         - name: ingest-conf
           mountPath: /etc/ega
@@ -57,9 +48,9 @@ spec:
         configMap:
           name: lega-config
           items:
-            - key: ega.conf
+            - key: conf.ini
               path: conf.ini
           defaultMode: 0744
-      - name: lega-inbox
+      - name: inbox
         persistentVolumeClaim:
-          claimName: localega-inbox-storage
+          claimName: inbox-storage
