--- a/yml/lega-config/pvc.lega.yml
+++ b/yml/lega-config/pvc.lega.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: localega-inbox-storage
+  name: inbox-storage
 spec:
   storageClassName: inbox
   accessModes:
@@ -13,11 +13,11 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: localega-db-storage
+  name: db-storage
 spec:
   storageClassName: postgres
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 0.5Gi
