--- a/yml/inbox/svc.inbox.yml
+++ b/yml/inbox/svc.inbox.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: lega-inbox
+  name: inbox
   labels:
-    app: lega-inbox
+    app: inbox
 spec:
   type: NodePort
   ports:
@@ -11,4 +11,4 @@ spec:
     targetPort: 9000
     protocol: TCP
   selector:
-    app: lega-inbox
+    app: inbox
