--- a/yml/mq/sts.lega-mq.yml
+++ b/yml/mq/sts.lega-mq.yml
@@ -18,7 +18,7 @@ spec:
         role: broker
     spec:
       containers:
-      - name: lega-mq
+      - name: mq
         image: rabbitmq:3.6.14-management
         imagePullPolicy: IfNotPresent
         command: ["/script/mq.sh"]
