--- a/yml/postgres/svc.postgres.yml
+++ b/yml/postgres/svc.postgres.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: lega-db
+  name: db
   labels:
-    app: lega-db
+    app: db
 spec:
   ports:
   - port: 5432
     targetPort: 5432
     protocol: TCP
   selector:
-    app: lega-db
+    app: db
