--- a/yml/inbox/sts.inbox.yml
+++ b/yml/inbox/sts.inbox.yml
@@ -1,49 +1,31 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: lega-inbox
+  name: inbox
   labels:
     role: inbox
     app: LocalEGA
 spec:
   replicas: 1
-  serviceName: "lega-inbox"
+  serviceName: inbox
   selector:
     matchLabels:
-      app: lega-inbox
+      app: inbox
   template:
     metadata:
       labels:
-        app: lega-inbox
+        app: inbox
         role: inbox
     spec:
       containers:
       - name: inbox
-        image: nbisweden/ega-inbox:latest
+        image: nbisweden/ega-mina-inbox:latest
         imagePullPolicy: Always
-        command: ["/bin/bash", "/scripts/ega-entrypoint.sh"]
-        securityContext:
-          capabilities:
-            add:
-              - SYS_ADMIN
-          privileged: true
         env:
         - name: BROKER_HOST
-          value: lega-mq.localega.svc.cluster.local
-        - name: DB_INSTANCE
-          value: lega-db.localega.svc.cluster.local
-        - name: POSTGRES_DB
-          value: lega
-        - name: POSTGRES_USER
-          valueFrom:
-            configMapKeyRef:
-              name: lega-db-config
-              key: user
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: lega-db-secret
-              key: postgres_password
+          value: mq.localega.svc.cluster.local
+        - name: INBOX_PORT
+          value: "2222"
         - name: CEGA_ENDPOINT
           value: http://cega-users/user/
         - name: CEGA_ENDPOINT_CREDS
@@ -51,39 +33,15 @@ spec:
             secretKeyRef:
               name: cega-keys
               key: credentials
-        - name: CEGA_ENDPOINT_JSON_PASSWD
-          value: .password_hash
-        - name: CEGA_ENDPOINT_JSON_PUBKEY
-          value: .pubkey
         ports:
-        - name: lega-inbox
-          containerPort: 9000
+        - name: inbox
+          containerPort: 2222
           protocol: TCP
         volumeMounts:
-        - name: lega-inbox-entrypoint
-          mountPath: /scripts
         - name: lega-inbox
           mountPath: /ega/inbox
-        - name: devfuse
-          mountPath: /dev/fuse
-        - name: temp
-          mountPath: /temp
       # restartPolicy: Always
       volumes:
-      - name: lega-inbox-entrypoint
-        configMap:
-          name: lega-inbox-entrypoint
-          defaultMode: 0744
-      - name: devfuse
-        hostPath:
-          path: /dev/fuse
-      - name: temp
-        configMap:
-          name: lega-config
-          items:
-            - key: conf.ini
-              path: conf.ini
-          defaultMode: 0744
       - name: lega-inbox
         persistentVolumeClaim:
           claimName: inbox-storage
