--- a/yml/inbox/svc.inbox.yml
+++ b/yml/inbox/svc.inbox.yml
@@ -8,7 +8,8 @@ spec:
   type: NodePort
   ports:
   - port: 2222
-    targetPort: 9000
+    targetPort: 2222
     protocol: TCP
+    name: inbox
   selector:
     app: inbox
