--- a/yml/cega-mq/sts.cega-mq.yml
+++ b/yml/cega-mq/sts.cega-mq.yml
@@ -56,6 +56,7 @@ spec:
         name: rabbitmq
       spec:
         accessModes: [ "ReadWriteOnce" ]
+        storageClassName: rook-ceph-block
         resources:
           requests:
             storage: 1Gi # make this bigger in production
