--- a/yml/postgres/deploy.postgres.yml
+++ b/yml/postgres/deploy.postgres.yml
@@ -70,3 +70,15 @@ spec:
       - name: initdb
         configMap:
           name: initsql
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: db-storage
+spec:
+  storageClassName: rook-ceph-block
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
