Define cega connection as a secret

--- a/yml/lega-config/secret.lega.yml
+++ b/yml/lega-config/secret.lega.yml
@@ -31,3 +31,11 @@ type: Opaque
 data:
   credentials: <change me>
   # secret_key: <change me>
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: cega-url
+type: Opaque
+data:
+  url: #amqp://<user>:<password>@cega-mq:5672/<queue>
