--- a/yml/mq/sts.lega-mq.yml
+++ b/yml/mq/sts.lega-mq.yml
@@ -63,6 +63,7 @@ spec:
         name: rabbitmq
       spec:
         accessModes: [ "ReadWriteOnce" ]
+        storageClassName: rook-ceph-block
         resources:
           requests:
             storage: 0.5Gi # make this bigger in production
