--- a/yml/mq/sts.lega-mq.yml
+++ b/yml/mq/sts.lega-mq.yml
@@ -63,7 +63,7 @@ spec:
         name: rabbitmq
       spec:
         accessModes: [ "ReadWriteOnce" ]
-        storageClassName: rook-ceph-block
+        storageClassName: local #Change this to whatever going to be used in production.
         resources:
           requests:
             storage: 0.5Gi # make this bigger in production
