Add flexVolume option

--- a/yml/inbox/sts.inbox.yml
+++ b/yml/inbox/sts.inbox.yml
@@ -43,5 +43,16 @@ spec:
       # restartPolicy: Always
       volumes:
       - name: lega-inbox
+## select PVC or flexVolume
         persistentVolumeClaim:
           claimName: inbox-storage
+##################################
+#        flexVolume:
+#          driver: ceph.rook.io/rook
+#          fsType: ceph
+#          options:
+#            fsName: sharedfs
+#            clusterNamespace: rook-ceph
+#            path: /some/path/inside/cephfs
+#            # by default the path is /, but you can override and mount a specific path of the filesystem by using the path attribute
+#            # the path must exist on the filesystem, otherwise mounting the filesystem at that path will fail
