--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,8 @@ script:
 - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n kube-system get pods -lk8s-app=kube-dns -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for kube-dns to be available"; kubectl get pods --all-namespaces; done
 # Deploy LocalEGA stack
 - pip install -r auto/requirements.txt
-- python auto/deploy.py --fake-cega --config --deploy all
+- python auto/deploy.py --config
+- python auto/deploy.py --fake-cega --deploy
 # Make sure created pods are scheduled and running.
 # takes a long time to start
 - sleep 180
