--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ sudo: required
 
 # This moves Kubernetes specific config files.
 # Inspured by https://github.com/LiliC/travis-minikube - Provided under Apache License
+
+# We need the systemd for the kubeadm and it's default from 16.04+
+dist: xenial
+# This moves Kubernetes specific config files.
 env:
 - CHANGE_MINIKUBE_NONE_USER=true
 
@@ -16,7 +20,7 @@ before_script:
 # Download minikube.
 - curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 && chmod +x minikube && sudo mv minikube /usr/local/bin/
 - sudo minikube config set WantReportErrorPrompt false
-- sudo minikube start --vm-driver=none --bootstrapper=localkube --kubernetes-version=v1.10.0
+- sudo minikube start --vm-driver=none --bootstrapper=kubeadm --kubernetes-version=v1.10.0
 # Fix the kubectl context, as it's often stale.
 - minikube update-context
 # Wait for Kubernetes to be up and ready.
