--- a/.travis.yml
+++ b/.travis.yml
@@ -3,52 +3,19 @@ language: python
 python: 3.6
 sudo: required
 
-# This moves Kubernetes specific config files.
-# Inspured by https://github.com/LiliC/travis-minikube - Provided under Apache License
-
-# We need the systemd for the kubeadm and it's default from 16.04+
 dist: xenial
-# This moves Kubernetes specific config files.
-env:
-- CHANGE_MINIKUBE_NONE_USER=true
 
-before_script:
-# Make root mounted as rshared to fix kube-dns issues.
-- sudo mount --make-rshared /
-# Download kubectl, which is a requirement for using minikube.
-- curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.10.0/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
-# Download minikube.
-- curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 && chmod +x minikube && sudo mv minikube /usr/local/bin/
-- sudo minikube config set WantReportErrorPrompt false
-- sudo minikube start --vm-driver=none --bootstrapper=kubeadm --kubernetes-version=v1.10.0
-# Fix the kubectl context, as it's often stale.
-- minikube update-context
-# Wait for Kubernetes to be up and ready.
-- JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
+stages:
+  - name: style guide
+    if: type IN (push, pull_request)
 
-script:
-- kubectl cluster-info
-# Verify kube-addon-manager.
-# kube-addon-manager is responsible for managing other kubernetes components, such as kube-dns, dashboard, storage-provisioner..
-- sleep 10
-- JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n kube-system get pods -lcomponent=kube-addon-manager -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for kube-addon-manager to be available"; kubectl get pods --all-namespaces; done
-# Wait for kube-dns to be ready.
-- sleep 10
-- JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n kube-system get pods -lk8s-app=kube-dns -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for kube-dns to be available"; kubectl get pods --all-namespaces; done
-# Deploy LocalEGA stack
-- pip install -r auto/requirements.txt
-- python auto/deploy.py --config
-- python auto/deploy.py --fake-cega --deploy
-# Make sure created pods are scheduled and running.
-# takes a long time to start
-- sleep 180
-- JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl -n testing get pods -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1;echo "waiting for LocalEGA deployment to be available"; kubectl get pods -n testing; done
-- DEPLOY_IP=$(minikube ip)
-- CEGA_PORT=$(kubectl describe svc cega-mq --namespace=testing | grep "NodePort:" | awk '$2=="amqp" {print substr($3,1,5)}')
-- INBOX_PORT=$(kubectl describe svc inbox --namespace=testing | grep "NodePort:" | awk '{print substr($3,1,5)}')
-- MINIO_PORT=$(kubectl describe svc minio-service --namespace=testing | grep "NodePort:" | awk '{print substr($3,1,5)}')
-- minikube service list
-- python test/sftp.py test/README.md --inbox $DEPLOY_IP --inbox-port $INBOX_PORT --s3 $DEPLOY_IP:$MINIO_PORT --cm $DEPLOY_IP --cm-port $CEGA_PORT
+jobs:
+  include:
+    - stage: style guide
+      python: 3.6
+      before_script:
+        - pip install tox-travis
+      script: tox
 
 notifications:
   email: false
