--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ basepython =
     py36: python3.6
 passenv = TRAVIS TRAVIS_*
 deps =
+    pydocstyle==3.0.0
     flake8
     flake8-docstrings
     -rrequirements.txt
