--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36}
+envlist = flake8
 skipsdist = True
 
 [flake8]
@@ -7,19 +7,20 @@ ignore = E226,D203,D212,D213,D404,D100,D104
 max-line-length = 160
 max-complexity = 15
 
-[testenv]
-basepython =
-    py36: python3.6
-passenv = TRAVIS TRAVIS_*
+[testenv:flake8]
+skip_install = true
 deps =
     pydocstyle==3.0.0
     flake8
     flake8-docstrings
     -rrequirements.txt
-# Stop after first failure
 commands = flake8 .
+
+[testenv]
+deps =
+    -rrequirements.txt
 
 [travis]
 unignore_outcomes = True
 python =
-    3.6: py36
+    3.7: flake8
